# FaroShell

./: .gitignore  CMakeLists.txt  Makefile  Makefile.variables  README.md  liste
src/: dakor  lecture.h  main.c  parse.h  test
src/cmd/: Template_separation_options_arguments.c
src/cmd/cat/: Makefile  cat.c  cat.h  main.c
src/cmd/cd/: Makefile  cd.c  cd.h  main  main.c
src/cmd/chgrp/: Makefile  chgrp.c  chgrp.h  main.c
src/cmd/chmod/: Makefile  chmod.c  chmod.h  main.c
src/cmd/cp/: Makefile  cp.c  cp.h  main.c
src/cmd/du/: Makefile  du.c  du.h  main.c
src/cmd/echo/: Makefile  echo.c  echo.h  main.c
src/cmd/exit/: exit.c  exit.h  main.c
src/cmd/ls/: Makefile  ls.c  ls.h  main  main.c
src/cmd/mkdir/: Makefile  main.c  mkdir.c  mkdir.h
src/cmd/mv/: Makefile  main.c  mv.c  mv.h
src/cmd/pwd/: Makefile  main.c  pwd.c  pwd.h
src/cmd/rm/: IS_file.c  IS_file.h  Makefile  main  main.c  rm.c  rm.h
src/cmd/su/: Makefile  main.c  su.c  su.h
src/interpreter/: lecture.c  lecture.h  liste.c  liste.h  main.c  parse.c  parse.h  stack.c  stack.h
src/libs/: liste.h
src/utils/: faroprint.c  faroprint.h
